[package]
name = "isomdl"
version = "0.1.0"
edition = "2021"
description = "ISO mDL implementation in Rust"
readme = "README.md"
homepage = "https://github.com/spruceid/isomdl"
repository = "https://github.com/spruceid/isomdl"
documentation = "https://docs.rs/isomdl"
license = "Apache-2.0 OR MIT"
exclude = ["test/"]

[dependencies]
anyhow = "1.0"
ecdsa = { version = "0.16.0", features = ["serde"] }
p256 = { version = "0.13.0", features = ["serde", "ecdh"] }
p384 = { version = "0.13.0", features = ["serde", "ecdh"] }
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.0"
sha2 = "0.10.6"
thiserror = "2.0.3"
hmac = "0.12.1"
time = { version = "0.3.20", features = ["formatting", "parsing", "macros"] }
signature = { version = "2.0.0", features = ["std"] }
async-signature = "0.5.1"
x509-cert = { version = "0.2.5", features = ["pem"] }
generic-array = "0.14.7"

coset = "0.3.8"
ciborium = "0.2.2"
digest = "0.10.7"

[dev-dependencies]
hex = "0.4.3"
p256 = "0.13.0"
serde_json = "*"
