[package]
name = "isomdl"
version = "0.1.0"
edition = "2021"
description = "ISO mDL implementation in Rust"
readme = "README.md"
homepage = "https://github.com/spruceid/isomdl"
repository = "https://github.com/spruceid/isomdl"
documentation = "https://docs.rs/isomdl"
license = "Apache-2.0 OR MIT"
exclude = ["test/"]

[features]
crypto = ["dep:p256", "dep:p384", "dep:ecdsa", "dep:sha2", "dep:hmac"]
openssl = ["dep:openssl"]

[dependencies]
ecdsa = { version = "0.16.0", features = ["serde"], optional = true }
p256 = { version = "0.13.0", features = ["serde", "ecdh"], optional = true }
p384 = { version = "0.13.0", features = ["serde", "ecdh"], optional = true }
sha2 = { version = "0.10.6", optional = true }
hmac = { version = "0.12.1", optional = true }

openssl = { version = "0.10.68", optional = true }

anyhow = "1.0"
digest = { version = "0.10.7", features = ["mac"] }
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.0"
thiserror = "2.0.3"
time = { version = "0.3.20", features = ["formatting", "parsing", "macros"] }
signature = { version = "2.0.0", features = ["std"] }
async-signature = "0.5.1"
x509-cert = { version = "0.2.5", features = ["pem"] }
generic-array = "0.14.7"

coset = "0.3.8"
ciborium = "0.2.2"

[dev-dependencies]
hex = "0.4.3"
p256 = "0.13.0"
serde_json = "*"
